--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ owner:
   email: fabian.schuhmann@uol.de
   # Do not include the @ symbol in your Twitter username
   twitter: #laderast
-  linkedin: #username
+  linkedin: fabian-schuhmann-10135a193
   github: fabianschuhmann
   orcid: 0000-0002-3768-6494 
   researchgate: #username
