--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ logo: # filename of a logo image that has been placed into your images directory
 owner:
   name: Fabian Schuhmann
   avatar: Bild_Uol.jpg
-  bio: "Write an interesting text here"
+  bio: "PhD Student"
   email: fabian.schuhmann@uol.de
   # Do not include the @ symbol in your Twitter username
   twitter: #laderast
