Second test for two blog posts

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@
   url: /
   
 - title: Publications
-  url: /publications/
+  url: /Publications/publications/
 
 - title: Presentations
   url: /presentations/
