soon i will reset

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,10 +3,10 @@
   url: /
   
 - title: Publications
-  url: /Publications/index/
+  url: /publications/ 
 
 - title: Presentations
-  url: /Presentations/index/
+  url: /presentations/
   
 - title: Teaching
   url: /teaching/
