--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,10 +3,10 @@
   url: /
   
 - title: Publications
-  url: /publications/ 
+  url: /blog/ 
 
 - title: Presentations
-  url: /blog/
+  url: /presentations/
   
 - title: Teaching
   url: /teaching/
