Changed Presentation title

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@
 - title: Publications
   url: /publications/ 
 
-- title: Presentations
+- title: "Presentations/Posters"
   url: /presentations/
   
 - title: Teaching
