--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ owner:
   bio: "PhD Student, Carl-von-Ossietzky Universität Oldenburg"
   email: fabian.schuhmann@uol.de
   # Do not include the @ symbol in your Twitter username
-  twitter: @fabianschuhmann
+  twitter: fabianschuhmann
   linkedin: fabian-schuhmann-10135a193
   github: fabianschuhmann
   orcid: 0000-0002-3768-6494 
