--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ logo: logo.jpg
 owner:
   name: Fabian Schuhmann
   avatar: Bild_Uol.jpg
-  bio: "PhD Student, Carl-von-Ossietzky Universität Oldenburg"
+  bio: "Carl-von-Ossietzky Universität Oldenburg"
   email: fabian.schuhmann@uol.de
   # Do not include the @ symbol in your Twitter username
   twitter: fabianschuhmann
