--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ owner:
   linkedin: fabian-schuhmann-10135a193
   github: fabianschuhmann
   orcid: 0000-0002-3768-6494 
-  researchgate: "Fabian Schuhmann"
+  researchgate: fabian-schuhmann-2
   mendeley: #username
   google:
     plus: #username
